--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,11 @@
     height: 15vh;
     background-color: #1b1b1b;
 }
+
+.navbar a {
+    text-decoration: none;
+}
+
 .navbar-logo {
     justify-self: start;
     margin-left: 20px;
@@ -17,6 +22,8 @@
     margin-top: 4vh;
     cursor: pointer;
 }
+
+
 
 .seeCarrito {
     font-size: 25px;
